--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     env_file: .env
     ports:
       - "5432:5432"
-#    volumes:
-#            - ./data/postgresql:/var/lib/postgresql/data
+    volumes:
+            - ./data/postgresql:/var/lib/postgresql/data
 
