--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 spring:
-  config:
-    import: optional:file:.env[.properties]
   datasource:
     url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
     username: ${POSTGRES_USER}
@@ -10,9 +8,22 @@ spring:
     show-sql: true
     database: postgresql
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   jwt:
     secret: ${JWT_SECRET}
+  cloud:
+    aws:
+      s3:
+        bucket: ${BUCKET_NAME}
+      stack.auto: false
+      region:
+        static: ap-northeast-2
+      credentials:
+        accessKey: ${S3_ACCESS_KEY}
+        secretKey: ${S3_SECRET_KEY}
+  servlet:
+    multipart:
+      enabled: true
 
 server:
   port: 8080
@@ -23,4 +34,6 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+    enable: true
+
 
