--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,24 @@ services:
   db:
     image: postgres:15
     restart: always
-    container_name: db
+    container_name: moonwalk-db
     env_file: .env
     ports:
       - "5432:5432"
     volumes:
-            - ./data/postgresql:/var/lib/postgresql/data
+      - moonwalk_db:/var/lib/postgresql/data
+  app:
+    image: openjdk:21-slim
+    container_name: moonwalk_app
+    env_file: .env
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./app.jar:/app/app.jar
+    depends_on:
+      - db
+    restart: always
+    command: ["java", "-jar", "/app/app.jar"]
 
+volumes:
+  moonwalk_db:
