--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Java 21 설정
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+
+      # 2. 코드 체크아웃
       - name: Check out code
         uses: actions/checkout@v2
 
+      # 3. 프로젝트 빌드
       - name: Build project
         run: |
           ./gradlew clean build -x test
 
+      # 4. SSH 설정
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      # 5. 빌드된 JAR 파일을 EC2로 전송
       - name: Copy JAR file to EC2
         run: |
           scp -o StrictHostKeyChecking=no ./build/libs/your-app.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/app.jar
 
+      # 6. EC2에서 Docker Compose 실행
       - name: Restart Docker Compose on EC2
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
