[fix]: 유저 엔티티 필드 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,7 @@ server:
 springdoc:
   api-docs:
     path: /v3/api-docs
+    cache:
+      disabled: true
   swagger-ui:
     path: /swagger-ui.html
-    enable: true
-
-
