[feat]: 프로젝트 마이모듈에 모듈 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
   servlet:
     multipart:
       enabled: true
+      max-file-size: 25MB
+      max-request-size: 25MB
 
 server:
   port: 8080
