--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,10 +17,10 @@ spring:
         bucket: ${BUCKET_NAME}
       stack.auto: false
       region:
-        static: ap-northeast-2
+        static: ${AWS_DEFAULT_REGION}
       credentials:
-        accessKey: ${S3_ACCESS_KEY}
-        secretKey: ${S3_SECRET_KEY}
+        accessKey: ${AWS_ACCESS_KEY_ID}
+        secretKey: ${AWS_SECRET_ACCESS_KEY}
   servlet:
     multipart:
       enabled: true
