--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     database: postgresql
     hibernate:
       ddl-auto: create
+      default_batch_fetch_size: 100
   jwt:
     secret: ${JWT_SECRET}
   cloud:
@@ -26,6 +27,7 @@ spring:
       enabled: true
       max-file-size: 25MB
       max-request-size: 25MB
+
 
 server:
   port: 8080
