--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     show-sql: true
     database: postgresql
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
       default_batch_fetch_size: 100
   jwt:
     secret: ${JWT_SECRET}
