--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     env_file: .env
     ports:
       - "5432:5432"
-#    volumes:
-#      - moonwalk_db:/var/lib/postgresql/data
+    volumes:
+      - moonwalk_db:/var/lib/postgresql/data
   app:
-    image: openjdk:21-slim
+    image: openjdk:17-slim
     container_name: moonwalk_app
     env_file: .env
     ports:
@@ -21,5 +21,5 @@ services:
     restart: always
     command: ["java", "-jar", "/app/app.jar"]
 
-#volumes:
-#  moonwalk_db:
+volumes:
+  moonwalk_db:
