fix myModule update api

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,18 +35,18 @@ jobs:
       # 5. 빌드된 JAR 파일을 EC2로 전송
       - name: Copy JAR file to EC2
         run: |
-          scp -o StrictHostKeyChecking=no ./build/libs/moonwalk-api-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/app.jar
+          scp -o StrictHostKeyChecking=no ./build/libs/moonwalk-api-0.0.1-SNAPSHOT.jar ec2-user@${{ secrets.EC2_HOST }}:/home/ec2-user/app/app.jar
 
       # 6. `docker-compose.yml` 파일을 EC2로 전송
       - name: Copy docker-compose.yml to EC2
         run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/docker-compose.yml
+          scp -o StrictHostKeyChecking=no docker-compose.yml ec2-user@${{ secrets.EC2_HOST }}:/home/ec2-user/app/docker-compose.yml
 
       # 7. EC2에서 Docker Compose 실행
       - name: Restart Docker Compose on EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-          cd /home/ubuntu/app
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+          cd /home/ec2-user/app
           docker compose down
           docker compose up -d --build
           EOF
