--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     env_file: .env
     ports:
       - "5432:5432"
-    volumes:
-      - moonwalk_db:/var/lib/postgresql/data
+    # volumes:
+    #   - moonwalk_db:/var/lib/postgresql/data
   app:
     image: openjdk:17-slim
     container_name: moonwalk_app
     env_file: .env
     ports:
       - "8080:8080"
-    # volumes:
-    #   - ./app.jar:/app/app.jar
+    volumes:
+      - ./app.jar:/app/app.jar
     depends_on:
       - db
     restart: always
